# backend/routes/api.php
@@ -18,11 +18,15 @@ Route::post('/account',[AccountController::class,'store'])->middleware('auth:san
 Route::put('/account/{post}',[AccountController::class,'update'])->middleware('auth:sanctum');
 Route::get('/account/{post}',[AccountController::class,'show'])->middleware('auth:sanctum');
 
-Route::get('/user', [UserController::class,'index'])->middleware('auth:sanctum');
-Route::delete('/user/{post}',[UserController::class,'destroy'])->middleware('auth:sanctum');
-Route::post('/user',[UserController::class,'store'])->middleware('auth:sanctum');
-Route::put('/user/{post}',[UserController::class,'update'])->middleware('auth:sanctum');
-Route::get('/user/{post}',[UserController::class,'show'])->middleware('auth:sanctum');
+Route::get('/users', [UserController::class, 'index'])->middleware('auth:sanctum');
+
+Route::get('/users/{id}', [UserController::class, 'show'])->middleware('auth:sanctum');
+
+Route::post('/users', [UserController::class, 'store'])->middleware('auth:sanctum');
+
+Route::put('/users/{id}', [UserController::class, 'update'])->middleware('auth:sanctum');
+
+Route::delete('/users/{id}', [UserController::class, 'destroy'])->middleware('auth:sanctum');
 
 
 Route::post('/register',[UserController::class,'register']);
